fix: scrollbar thumb appearing invisible
Partially revers commit 0de0449433615d31017d20f4066a3eeba279eae5.

--- a/apps/frontend/src/app/globals.css
+++ b/apps/frontend/src/app/globals.css
@@ -16,32 +16,27 @@ body {
 }
 
 ::-webkit-scrollbar {
-  width: 1rem; /* w-4 */
+  @apply w-4;
 }
 
 /* Track */
 ::-webkit-scrollbar-track {
-  background-color: rgb(39 39 42 / 0.5); /* bg-zinc-800/50 */
-  border-radius: 9999px; /* rounded-full */
+  @apply bg-zinc-800/50 rounded-full;
 }
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background-color: rgb(113 113 122); /* bg-zinc-500 */
-  width: 0.5rem; /* w-2 */
-  border-radius: 9999px; /* rounded-full */
-  border: 1rem solid transparent; /* border-4 */
-  background-clip: content-box; /* bg-clip-content */
+  @apply bg-zinc-500 w-2 rounded-full border-4 border-solid border-transparent bg-clip-content;
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-  background-color: rgb(82 82 91); /* bg-zinc-600 */
+  @apply bg-zinc-600;
 }
 
 /* Handle on active */
 ::-webkit-scrollbar-thumb:active {
-  background-color: rgb(63 63 70); /* bg-zinc-700 */
+  @apply bg-zinc-700;
 }
 
 /************** Animations **************/
